--- a/includes/include-img/16proibidos.tex
+++ b/includes/include-img/16proibidos.tex
@@ -32,7 +32,7 @@
     & 
     \includegraphics[width=3cm]{img/f9.png} 
     & 
-    \includegraphics[width=3cm]{img/f10n.png} 
+    \includegraphics[width=3cm]{img/f10n2.png} 
     \\ %%Segundo Bloco legendas
     \footnotesize 
     (f)  \footnotesize Graph $F_6$. 
